navigate to biometric

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BiometricSample</string>
+    <string name="playground_biometric">Biometric</string>
 </resources>
