--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BiometricSample</string>
     <string name="playground_biometric">Biometric</string>
+    <string name="playground_compose">Compose</string>
 </resources>
