--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BiometricSample</string>
     <string name="playground_biometric">Biometric</string>
     <string name="playground_compose">Compose</string>
+    <string name="playground_compose_list">ComposeList</string>
 </resources>
