--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
   <string name="app_name">AndroidTechSample</string>
   <string name="playground_biometric">Biometric</string>
+  <string name="playground_motion_layout">MotionLayout</string>
+
 </resources>
