--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,13 @@
   <string name="playground_biometric">Biometric</string>
   <string name="playground_motion_layout">MotionLayout</string>
 
+  <!-- BiometricFragment -->
+  <string name="biometric_fingerprint_authentication">指紋認証</string>
+
   <!-- MotionFragment -->
   <string name="motion_label">Name</string>
   <string name="motion_top_swipe">TopSwipe</string>
   <string name="motion_side_swipe">SideSwipe</string>
+  <string name="motion_custom_view">CustomView</string>
 
 </resources>
