--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
   <string name="span_sample_text">Sample Text</string>
   <string name="span_sample_text_paragraph">Sample \nText</string>
 
+  <!-- NotificationFragment -->
+  <string name="notice_action">Action</string>
+
 </resources>
