--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,12 @@
   <string name="playground_list_view">ListView</string>
 
   <!-- BiometricFragment -->
+  <string name="biometric_label">@string/playground_biometric</string>
   <string name="biometric_fingerprint_authentication">指紋認証</string>
 
   <!-- MotionFragment -->
-  <string name="motion_label">Name</string>
+  <string name="motion_label">@string/playground_motion_layout</string>
+  <string name="motion_top_swipe_name">Name</string>
   <string name="motion_top_swipe">TopSwipe</string>
   <string name="motion_side_swipe">SideSwipe</string>
   <string name="motion_custom_view">CustomView</string>
@@ -43,4 +45,7 @@
 
   <!-- ListFragment -->
   <string name="list_all">すべて</string>
+
+  <!-- GroupieFragment -->
+  <string name="groupie_label">@string/playground_groupie_view</string>
 </resources>
