--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,14 @@
   <string name="playground_label_layout">Layout</string>
   <string name="playground_label_list">List</string>
   <string name="playground_label_other">Other</string>
+  <string name="playground_label_compose">Jetpack Compose</string>
   <string name="playground_biometric">Biometric</string>
   <string name="playground_motion_layout">MotionLayout</string>
   <string name="playground_groupie_view">GroupieView</string>
   <string name="playground_span_view">SpanView</string>
   <string name="playground_notification_view">NotificationView</string>
   <string name="playground_camera_view">CameraView</string>
+  <string name="playground_hello_view">HelloView</string>
   <string name="playground_permission_camera">カメラの許可をしてください</string>
   <string name="playground_list_view">ListView</string>
 
