--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,6 @@
   <!-- ComposeFragment -->
   <string name="compose_playground">Playground</string>
   <string name="compose_test">Test</string>
+  <string name="compose_new_page">NewPage</string>
 
 </resources>
