--- a/feature/resources/src/main/res/values/strings.xml
+++ b/feature/resources/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
   <string name="playground_span_view">SpanView</string>
   <string name="playground_notification_view">NotificationView</string>
   <string name="playground_camera_view">CameraView</string>
-  <string name="playground_hello_view">HelloView</string>
+  <string name="playground_hello_view">HelloCompose</string>
   <string name="playground_permission_camera">カメラの許可をしてください</string>
   <string name="playground_list_view">ListView</string>
 
@@ -57,7 +57,7 @@
   <string name="camera_folder_name">AndroidTechSample</string>
 
   <!-- ComposeFragment -->
-  <string name="compose_playground">Playground</string>
+  <string name="compose_label">Jetpack Compose</string>
   <string name="compose_test">Test</string>
   <string name="compose_new_page">NewPage</string>
 
