--- a/feature/resources/src/main/res/values/strings.xml
+++ b/feature/resources/src/main/res/values/strings.xml
@@ -60,5 +60,7 @@
   <string name="compose_label">Jetpack Compose</string>
   <string name="compose_ameba">Ameba</string>
   <string name="compose_ameba_follow_feed">FollowFeed</string>
+  <string name="compose_twitter">Twitter</string>
+  <string name="compose_twitter_feed">Feed</string>
 
 </resources>
