--- a/feature/resources/src/main/res/values/strings.xml
+++ b/feature/resources/src/main/res/values/strings.xml
@@ -61,6 +61,6 @@
   <string name="compose_ameba">Ameba</string>
   <string name="compose_ameba_follow_feed">FollowFeed</string>
   <string name="compose_twitter">Twitter</string>
-  <string name="compose_twitter_feed">Feed</string>
+  <string name="compose_twitter_home">Home</string>
 
 </resources>
