--- a/feature/resources/src/main/res/values/strings.xml
+++ b/feature/resources/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
   <string name="playground_span_view">SpanView</string>
   <string name="playground_notification_view">NotificationView</string>
   <string name="playground_camera_view">CameraView</string>
+  <string name="playground_chrome_custom_tab_view">ChromeCustomTabView</string>
   <string name="playground_hello_view">HelloCompose</string>
   <string name="playground_permission_camera">カメラの許可をしてください</string>
   <string name="playground_list_view">ListView</string>
