--- a/feature/resources/src/main/res/values/strings.xml
+++ b/feature/resources/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
   <string name="compose_label">Jetpack Compose</string>
   <string name="compose_twitter">Twitter</string>
   <string name="compose_pager">Pager</string>
+  <string name="compose_animation">Animation</string>
 
   <!-- Twitter -->
   <string name="twitter_home">Home</string>
