--- a/feature/resources/src/main/res/values/strings.xml
+++ b/feature/resources/src/main/res/values/strings.xml
@@ -104,5 +104,6 @@
   <string name="compose_component">Component</string>
   <string name="compose_pager">Pager</string>
   <string name="compose_animation">Animation</string>
+  <string name="compose_date_picker">DatePicker</string>
 
 </resources>
